--- a/ManageCredits.Contracts/ManageCredits.Contracts.csproj
+++ b/ManageCredits.Contracts/ManageCredits.Contracts.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManageCredits.Domain.Entities\ManageCredits.Domain.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
