--- a/ManageCredits.Domain.Entities/ManageCredits.Domain.Entities.csproj
+++ b/ManageCredits.Domain.Entities/ManageCredits.Domain.Entities.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManageCredits.Domain.Helpers\ManageCredits.Domain.Helpers.csproj" />
+  </ItemGroup>
+
 </Project>
