--- a/ManageCredits.Domain/ManageCredits.Domain.csproj
+++ b/ManageCredits.Domain/ManageCredits.Domain.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManageCredits.Contracts\ManageCredits.Contracts.csproj" />
+    <ProjectReference Include="..\ManageCredits.Domain.Entities\ManageCredits.Domain.Entities.csproj" />
+    <ProjectReference Include="..\ManageCredits.Domain.Helpers\ManageCredits.Domain.Helpers.csproj" />
+    <ProjectReference Include="..\ManageCredits.Infrastructure\ManageCredits.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
