:boom: docker-compose config is added successfully

--- a/ManageCredits.API/Dockerfile
+++ b/ManageCredits.API/Dockerfile
@@ -1,15 +1,28 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+ARG DOTNET_RUNTIME=mcr.microsoft.com/dotnet/aspnet:8.0
+ARG DOTNET_SDK=mcr.microsoft.com/dotnet/sdk:8.0
+
+FROM $DOTNET_RUNTIME AS base
 USER app
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 891
+EXPOSE 777
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM $DOTNET_SDK AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["ManageCredits.API/ManageCredits.API.csproj", "ManageCredits.API/"]
+
+COPY ["ManageCredits.API/ManageCredits.API.csproj", "ManageCredits.API/"]
+COPY ["ManageCredits.Contracts/ManageCredits.Contracts.csproj", "ManageCredits.Contracts/"]
+COPY ["ManageCredits.Domain.Entities/ManageCredits.Domain.Entities.csproj", "ManageCredits.Domain.Entities/"]
+COPY ["ManageCredits.Domain.Helpers/ManageCredits.Domain.Helpers.csproj", "ManageCredits.Domain.Helpers/"]
+COPY ["ManageCredits.Domain/ManageCredits.Domain.csproj", "ManageCredits.Domain/"]
+COPY ["ManageCredits.Infrastructure/ManageCredits.Infrastructure.csproj", "ManageCredits.Infrastructure/"]
+
+COPY ["ManageCredits.Tests/ManageCredits.Tests.csproj", "ManageCredits.Tests/"]
+
 RUN dotnet restore "./ManageCredits.API/ManageCredits.API.csproj"
 COPY . .
 WORKDIR "/src/ManageCredits.API"
