:wrench: Mysql connection string is established

--- a/ManageCredits.API/appsettings.json
+++ b/ManageCredits.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ManageCreditsConnection": "Server=manage-credits-db;Port=8244;Database=ManageCredits;Uid=credits;Pwd=ManageCredits__Password"
+  },
   "AllowedHosts": "*"
 }
