--- a/ManageCredits.Domain.Helpers/ManageCredits.Domain.Helpers.csproj
+++ b/ManageCredits.Domain.Helpers/ManageCredits.Domain.Helpers.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+  </ItemGroup>
+
 </Project>
