--- a/ManageCredits.Domain/ManageCredits.Domain.csproj
+++ b/ManageCredits.Domain/ManageCredits.Domain.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.2" />
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ManageCredits.Contracts\ManageCredits.Contracts.csproj" />
     <ProjectReference Include="..\ManageCredits.Domain.Entities\ManageCredits.Domain.Entities.csproj" />
     <ProjectReference Include="..\ManageCredits.Domain.Helpers\ManageCredits.Domain.Helpers.csproj" />
