--- a/ManageCredits.Domain.Helpers/ManageCredits.Domain.Helpers.csproj
+++ b/ManageCredits.Domain.Helpers/ManageCredits.Domain.Helpers.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="System.ComponentModel" Version="4.3.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
