:construction: Manage credits API project setup in progress

--- a/ManageCredits.API/appsettings.json
+++ b/ManageCredits.API/appsettings.json
@@ -8,5 +8,15 @@
   "ConnectionStrings": {
     "ManageCreditsConnection": "Server=manage-credits-db;Port=8244;Database=ManageCredits;Uid=credits;Pwd=ManageCredits__Password"
   },
+  "SwaggerOptions": {
+    "JsonRoute": "swagger/{documentName}/swagger.json",
+    "Description": "Manage Credits API - V1",
+    "UIEndpoint": "/swagger/v1/swagger.json",
+    "Contact": {
+      "Name": "Cristian Bonilla",
+      "Email": "cristiancamilo10_95@outlook.com",
+      "Url": "https://github.com/CristianBonilla"
+    }
+  },
   "AllowedHosts": "*"
 }
