--- a/ManageCredits.API/ManageCredits.API.csproj
+++ b/ManageCredits.API/ManageCredits.API.csproj
@@ -43,4 +43,8 @@
     <ProjectReference Include="..\ManageCredits.Infrastructure\ManageCredits.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
