--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,12 +4,12 @@ services:
   manage-credits-api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:891;https://+:777
-      - ASPNETCORE_HTTP_PORTS=14533
-      - ASPNETCORE_HTTPS_PORTS=12399
+      - ASPNETCORE_URLS=https://+:778;http://+:922
+      - ASPNETCORE_HTTPS_PORTS=14533
+      - ASPNETCORE_HTTP_PORTS=12882
     ports:
-      - "14533:891"
-      - "12399:777"
+      - "14533:778"
+      - "12882:922"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
