:boom: Fixed db connection from docker-compose and DbStartExtensions

--- a/ManageCredits.API/appsettings.json
+++ b/ManageCredits.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ManageCreditsConnection": "Server=manage-credits-db;Port=8355;Database=ManageCredits;Uid=credits;Pwd=ManageCredits__Password"
+    "ManageCreditsConnection": "Server=manage-credits-db;User=root;Password=ManageCredits__Password;Database=manage_credits;PersistSecurityInfo=True"
   },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
