--- a/ManageCredits.Domain/ManageCredits.Domain.csproj
+++ b/ManageCredits.Domain/ManageCredits.Domain.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\ManageCredits.Infrastructure\ManageCredits.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
