:boom: Operation to get teacher by identifier in service

--- a/ManageCredits.Contracts/ManageCredits.Contracts.csproj
+++ b/ManageCredits.Contracts/ManageCredits.Contracts.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\ManageCredits.Domain.Entities\ManageCredits.Domain.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
